deployment/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map-storage-production
spec:
  selector:
    matchLabels:
      app: map-storage
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: map-storage
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/maps:master
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-c", "gunicorn.py", "map_storage.wsgi:app"]
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
