deployment/production/service.yml
kind: Service
apiVersion: v1
metadata:
  name: map-storage-production
spec:
  selector:
    app: map-storage
    env: production
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 8000
